# py_web_hw-10

./: .gitignore  pyproject.toml
hw10/hw10/: settings.py  urls.py
hw10/quotes/: urls.py  utils.py  views.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: base.html  index.html
hw10/utils/: add_quotes_to_modgodb.py  authors.json  connect.py  quotes.json
