[tool.poetry]
name = "py-web-hw-10"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "py_web_hw_10"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
